[tool.poetry]
name = "python-env"
version = "0.1.0"
description = ""
authors = ["happy663 <tatu2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
notebook = "^7.1.3"
pyright = "^1.1.363"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"


[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",    # line too long, handled by black
    "PLR0913",
    "D103",
    "D100",
    # "INP001",
]
